boreal/tests/assets/invalid_files/compilation/unknown_identifier_field.yar
// [error: unknown field "myn"]
import "math"

rule a {
    condition:
        math.myn == 2
}
